force-app/main/default/objects/InvoiceConfigurationOptions__c/InvoiceConfigurationOptions__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Invoice Configuration Options</label>
</CustomObject>