force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Create_opportunity_product_as_QB_Item__c.field-meta.xml
<CustomField>
    <fullName>Create_opportunity_product_as_QB_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create opportunity product as QB Item</label>
    <type>Checkbox</type>
</CustomField>