force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Create_Update_Qb_Payment_In_Sf__c.field-meta.xml
<CustomField>
    <fullName>Create_Update_Qb_Payment_In_Sf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Update Qb Payment In Sf</label>
    <type>Checkbox</type>
</CustomField>