force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Enable_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Enable_Opportunity_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Opportunity Product</label>
    <type>Checkbox</type>
</CustomField>