force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Income_Account__c.field-meta.xml
<CustomField>
    <fullName>Income_Account__c</fullName>
    <label>Income Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>