force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Invoice_Customer_ChildObject_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Customer_ChildObject_Api_Name__c</fullName>
    <label>Invoice Customer ChildObject Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>