force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>