force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <label>Invoice Due Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>