force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Invoice_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Object_Name__c</fullName>
    <label>Invoice Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>