force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Invoice_Save__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Save__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invoice Save</label>
    <type>Checkbox</type>
</CustomField>