force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Invoice_Save_and_Send__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Save_and_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Save and Send</label>
    <type>Checkbox</type>
</CustomField>