force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/LineItem_ChildObject_Name__c.field-meta.xml
<CustomField>
    <fullName>LineItem_ChildObject_Name__c</fullName>
    <label>LineItem Child Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>