force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/LineItem_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>LineItem_Object_Name__c</fullName>
    <label>LineItem Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>