force-app/main/default/objects/InvoiceConfigurationOptions__c/fields/Payment_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Object_Name__c</fullName>
    <label>Payment Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>